# opencc-shell

./: AUTHORS  CMakeLists.txt  README.md  index.html  opencc-shell.desktop  params.json
cmake/: QtWrapper.cmake
debian/: changelog  control  copyright  opencc-shell-data.install  opencc-shell-qt4.install  opencc-shell-qt5.menu  rules
l10n/: zh_CN.ts  zh_TW.ts
lib/OpenCC/: CMakeLists.txt
lib/OpenCC/data/: CMakeLists.txt
lib/OpenCC/src/: CMakeLists.txt
lib/uchardet/: CMakeLists.txt
lib/uchardet/src/: CMakeLists.txt
src/: App.qrc  BatchConvertWidget.cpp  BatchConvertWidget.hpp  CMakeLists.txt  CharsetDetector.cpp  CharsetDetector.hpp  ConvertSettingWidget.cpp  ConvertSettingWidget.hpp  FileListWidget.cpp  FileListWidget.hpp  MainWindow.cpp  MainWindow.hpp  PersonalSettings.hpp  SingleConvertWidget.cpp  SingleConvertWidget.hpp  TextConverter.cpp  TextConverter.hpp  TextLoader.cpp  TextLoader.hpp  main.cpp
